src/assets/app.scss
@import "npm:bootstrap/scss/functions";

/* --- Theme specific variables -------- */

@import "theme";
$theme-color-primary: #f4f021 !default;

$body-bg: $theme-color-primary;
$headings-font-weight: 700;
$headings-line-height: 1.1;

$line-height-base: 1.8;
$font-size-base: 1.125rem;
$font-weight-normal: 500;
$font-family-sans-serif: Poppins, sans-serif;
$body-color: black;


$link-color: black;
$link-decoration: none;
// $link-hover-color:  shift-color($link-color, $link-shade-percentage) !default;
$link-hover-decoration: underline;

$offcanvas-horizontal-width: 100%;
$offcanvas-bg-color: $theme-color-primary;
$offcanvas-color: black;

$bootstrap-icons-font-dir: "npm:bootstrap-icons/font/fonts/";


/* --- Imports ---------------------------------------------------- */
@import "npm:bootstrap/scss/bootstrap";

@import "npm:@fontsource/poppins/latin-500.css";
@import "npm:@fontsource/poppins/latin-700.css";

@import "bootstrap-icons/font/bootstrap-icons";
@import "npm:bootstrap-icons/font/bootstrap-icons.css";

/* --- Custom styles ---------------------------------------------------- */
html {
    scroll-behavior: smooth;
    }

/* Reference: https://redstapler.co/css-animated-gradient-background/  */
body {
    // background: linear-gradient(45deg,#F17C58, #E94584, #24AADB , #27DBB1,#FFDC18, #FF3706);
    background: linear-gradient(-45deg, #CEC7F2, #CEC7F2, #D99329, #F8BD2F , #CEC7F2 ,#F08F3A, #CEC7F2);
    background-size: 600% 100%;
    // background-size: 100% 100%;
    animation: gradient 15s linear infinite;
    animation-direction: alternate;
}
@keyframes gradient {
    0% {background-position: 0%}
    100% {background-position: 100%}
}

/* Reference: https://codepen.io/P1N2O/pen/pyBNzX */
// body {
//     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab) !important;
// 	background-size: 400% 400% !important;
// 	animation: gradient 15s ease infinite;
//     height: 100vh;
// }

// @keyframes gradient {
// 	0% {
// 		background-position: 0% 50%;
// 	}
// 	50% {
// 		background-position: 100% 50%;
// 	}
// 	100% {
// 		background-position: 0% 50%;
// 	}
// }

.site-header {
    // margin-top: 1rem;
    position: sticky;
    top: -1px;
    // top: 1rem;
}

.is-sticky {

    .site-title, 
    .site-nav {
        transition: background-color 1s;
        transition-timing-function: ease-in-out;
        // background-color: $body-bg;
        // background: linear-gradient(180deg, $body-bg, transparent);
    }
    
    .offcanvas-start, 
    > .row {
        transition: background-color 1s;
        transition-timing-function: ease-in-out;
        // background-color: $body-bg;
        background: linear-gradient(180deg, rgba(255,2555,255,0.9), rgba(255,2555,255,0.9) 40%, transparent);
    }
}


.toggler,
.offcanvas-close {
    font-size: 2rem;
    padding: 0.25rem;
    color: black;
}

.nav-item {
    padding: 1em 0;
}


.site-title { 
    font-size: larger; 
    font-weight: 700;
    line-height: 4rem;
}

h1 {
    margin-top: 2rem;

    --minFontSize: 32px;
    --maxFontSize: 100px;
    --scaler: 10vw;
    font-size: clamp( var(--minFontSize), var(--scaler), var(--maxFontSize) );

    @include media-breakpoint-up(lg) {
        margin-right: 25%;
    }
}

h1 + h2 {
    margin-bottom: 6rem;
    font-weight: 700;
    // font-size: calc(2 * 1rem);

    --minFontSize: 22px;
    --maxFontSize: 30px;
    --scaler: 10vw;
    font-size: clamp( var(--minFontSize), var(--scaler), var(--maxFontSize) );
}


// .offcanvas-header, 
// .offcanvas-close, 
// .offcanvas-title {
//     border: 2px solid red;
// }


nav {
    a {
        border-width: 0 0 1px 0;
        border-style: solid;
        border-color: transparent; // $body-bg;
        padding-bottom: 0.25rem;

        &:hover, 
        &.current-page {
            // border-color: black;
            text-decoration: none;
        }

    }

}

section {
    margin: 3rem 0;

    img {
        max-width: 100%;
        height: auto;
        margin-bottom: 1rem;
    }
}

.section-body-right {
    @include media-breakpoint-up(md) {
        margin-left: 15%;
    }
}
.section-body-left {
    @include media-breakpoint-up(md) {
        margin-right: 15%;
    }
}

body > .container-all > footer {
    text-align: left;
    font-size: small;

    a {
        margin: 2rem 2em 2em 0;
        display: inline-block;
    }
}

.goto {
    white-space: nowrap;
    display: inline-block;
    padding: 1em 1.25em;
    margin: 2px 2px 0 0;
    background-color: black;
    color: $body-bg;
    text-decoration: none;
    transition: background-color 0.5s ease,
                color 0.5s ease;

    &:hover {
        background-color: $body-bg;
        color: black;
    }
}

